[tool.poetry]
name = "weightedrank"
version = "0.1.0"
description = ""
authors = ["ahmad99tahir <a99tahir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
nltk = "^3.8.1"
spacy = "^3.7.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
